--- a/index.html
+++ b/index.html
@@ -1849,6 +1849,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 <ul>
 <li>An interesting <strong>Science</strong> paper <a href="http://science.sciencemag.org/content/324/5923/81">Distilling Free-Form Natural Laws from Experimental Data</a>, which uses genetic programming to automatically discover natural laws (symbolic regression).</li>
+<li>Hyper-heuristic bibliography: <a href="https://mustafamisir.github.io/hh.html">https://mustafamisir.github.io/hh.html</a></li>
 <li>The HyFlex hyper-heuristic framework: <a href="http://www.asap.cs.nott.ac.uk/external/chesc2011/hyflex_description.html">http://www.asap.cs.nott.ac.uk/external/chesc2011/hyflex_description.html</a></li>
 <li>The EvoHyp hyper-heuristic framwork: <a href="http://titancs.ukzn.ac.za/EvoHyp.aspx">http://titancs.ukzn.ac.za/EvoHyp.aspx</a></li>
 </ul>
