--- a/index.html
+++ b/index.html
@@ -1831,11 +1831,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 <div class="row">
   
-  <div class="col-12 col-lg-4 section-heading">
-    <h1>Supervision</h1>
-    
-  </div>
-  <div class="col-12 col-lg-8">
+  <div class="col-lg-12">
     
 
 <h3 id="code">Code</h3>
@@ -1843,6 +1839,11 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <ul>
 <li>My Git <a href="https://github.com/meiyi1986/GPJSS">repository</a>: <strong>genetic programming hyper-heuristics for evolving dispatching rules for job shop scheduling</strong>.</li>
 <li>My Git <a href="https://github.com/meiyi1986/gpucarp">repository</a>: <strong>meta-heuristic and hyper-heuristic algorithms for uncertain arc routing problem</strong>.</li>
+<li>My Git <a href="https://github.com/meiyi1986/gp-orienteering">repository</a>: <strong>genetic programming hyper-heuristic algorithms for stochastic orienteering problem</strong>.</li>
+<li>The ECJ Java library: <a href="https://cs.gmu.edu/~eclab/projects/ecj/">https://cs.gmu.edu/~eclab/projects/ecj/</a>. Highly recommeded if using GP.</li>
+<li>The HyFlex hyper-heuristic framework: <a href="http://www.asap.cs.nott.ac.uk/external/chesc2011/hyflex_description.html">http://www.asap.cs.nott.ac.uk/external/chesc2011/hyflex_description.html</a></li>
+<li>The EvoHyp hyper-heuristic framwork: <a href="http://titancs.ukzn.ac.za/EvoHyp.aspx">http://titancs.ukzn.ac.za/EvoHyp.aspx</a></li>
+<li>An automatic model fitting software: <a href="https://www.nutonian.com/products/eureqa/">Eureqa</a>. It has an academic 30-day trial version.</li>
 </ul>
 
 <h3 id="interesting-links">Interesting links</h3>
@@ -1850,8 +1851,6 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <ul>
 <li>An interesting <strong>Science</strong> paper <a href="http://science.sciencemag.org/content/324/5923/81">Distilling Free-Form Natural Laws from Experimental Data</a>, which uses genetic programming to automatically discover natural laws (symbolic regression).</li>
 <li>Hyper-heuristic bibliography: <a href="https://mustafamisir.github.io/hh.html">https://mustafamisir.github.io/hh.html</a></li>
-<li>The HyFlex hyper-heuristic framework: <a href="http://www.asap.cs.nott.ac.uk/external/chesc2011/hyflex_description.html">http://www.asap.cs.nott.ac.uk/external/chesc2011/hyflex_description.html</a></li>
-<li>The EvoHyp hyper-heuristic framwork: <a href="http://titancs.ukzn.ac.za/EvoHyp.aspx">http://titancs.ukzn.ac.za/EvoHyp.aspx</a></li>
 </ul>
 
   </div>
