--- a/index.html
+++ b/index.html
@@ -1849,8 +1849,11 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <h3 id="interesting-links">Interesting links</h3>
 
 <ul>
-<li>An interesting <strong>Science</strong> paper <a href="http://science.sciencemag.org/content/324/5923/81">Distilling Free-Form Natural Laws from Experimental Data</a>, which uses genetic programming to automatically discover natural laws (symbolic regression).</li>
+<li>A. E. Eiben&rsquo;s TED talk: <a href="https://www.youtube.com/watch?v=WJX_wAKhg8A">Tech Kangaroos - Evolution at Work</a></li>
+<li>Keith Downing&rsquo;s TED Talk: <a href="https://www.youtube.com/watch?v=D3zUmfDd79s">Evolutionary computation</a></li>
 <li>Hyper-heuristic bibliography: <a href="https://mustafamisir.github.io/hh.html">https://mustafamisir.github.io/hh.html</a></li>
+<li>An interesting <strong>Science</strong> paper &ldquo;<a href="http://science.sciencemag.org/content/324/5923/81">Distilling Free-Form Natural Laws from Experimental Data</a>&rdquo;, which uses genetic programming to automatically discover natural laws (symbolic regression).</li>
+<li>A <strong>Nature</strong> paper: &ldquo;<a href="https://www.nature.com/articles/nature14544">From evolutionary computation to the evolution of things</a>&ldquo;</li>
 </ul>
 
   </div>
