--- a/reviewers/index.html
+++ b/reviewers/index.html
@@ -29,7 +29,7 @@
     
   
   <meta name="description" content="IEEE Transactions on Evolutionary Computation (ARC/CORE Tier A*) Evolutionary Computation Journal (ARC/CORE Tier A) IEEE Transactions on Cybernetics (ARC/CORE Tier A) (Outstanding Reviewer 2018) European Journal of Operational Research (ARC/CORE Tier A) Journal of Heuristics (ARC/CORE Tier A) Transportation Research Part C (ARC Tier A)
- Transportation Research Part D Information Sciences Applied Soft Computing (Outstanding Reviewer 2015, 2017) Robotics and Computer-Integrated Manufacturing Swarm Intelligence Genetic Programming and Evolvable Machines Engineering Applications of Artificial Intelligence Journal of Information Technology &amp; Software Engineering Journal of Scheduling Applied Sciences">
+ Transportation Research Part D IEEE Transactions on Services Computing Information Sciences Applied Soft Computing (Outstanding Reviewer 2015, 2017) Robotics and Computer-Integrated Manufacturing Swarm Intelligence Genetic Programming and Evolvable Machines Engineering Applications of Artificial Intelligence Journal of Information Technology &amp; Software Engineering Journal of Scheduling Applied Sciences">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/reviewers/">
@@ -122,7 +122,7 @@
   <meta property="og:url" content="https://meiyi1986.github.io/reviewers/">
   <meta property="og:title" content="Journal Reviewer | Yi Mei @ VUW">
   <meta property="og:description" content="IEEE Transactions on Evolutionary Computation (ARC/CORE Tier A*) Evolutionary Computation Journal (ARC/CORE Tier A) IEEE Transactions on Cybernetics (ARC/CORE Tier A) (Outstanding Reviewer 2018) European Journal of Operational Research (ARC/CORE Tier A) Journal of Heuristics (ARC/CORE Tier A) Transportation Research Part C (ARC Tier A)
- Transportation Research Part D Information Sciences Applied Soft Computing (Outstanding Reviewer 2015, 2017) Robotics and Computer-Integrated Manufacturing Swarm Intelligence Genetic Programming and Evolvable Machines Engineering Applications of Artificial Intelligence Journal of Information Technology &amp; Software Engineering Journal of Scheduling Applied Sciences"><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+ Transportation Research Part D IEEE Transactions on Services Computing Information Sciences Applied Soft Computing (Outstanding Reviewer 2015, 2017) Robotics and Computer-Integrated Manufacturing Swarm Intelligence Genetic Programming and Evolvable Machines Engineering Applications of Artificial Intelligence Journal of Information Technology &amp; Software Engineering Journal of Scheduling Applied Sciences"><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -531,6 +531,7 @@
 <li><a href="http://www.springer.com/mathematics/applications/journal/10732">Journal of Heuristics</a> <strong>(ARC/CORE Tier A)</strong></li>
 <li><a href="http://www.journals.elsevier.com/transportation-research-part-c-emerging-technologies/">Transportation Research Part C</a> <strong>(ARC Tier A)</strong><br /></li>
 <li><a href="http://www.journals.elsevier.com/transportation-research-part-d-transport-and-environment/">Transportation Research Part D</a></li>
+<li><a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=4629386">IEEE Transactions on Services Computing</a></li>
 <li><a href="http://www.journals.elsevier.com/information-sciences/">Information Sciences</a></li>
 <li><a href="http://www.journals.elsevier.com/applied-soft-computing/">Applied Soft Computing</a> (<i>Outstanding Reviewer 2015, 2017</i>)</li>
 <li><a href="https://www.journals.elsevier.com/robotics-and-computer-integrated-manufacturing">Robotics and Computer-Integrated Manufacturing</a></li>
