--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -505,6 +505,8 @@
     <h2><a href="/publication/nguyen-2017-genetic/">Genetic programming for production scheduling: a survey with a unified framework</a></h2>
     <div class="article-style">
       
+      Genetic programming has been a powerful technique for automated design of production scheduling heuristics. Many studies have shown that heuristics evolved by genetic programming can outperform many existing heuristics manually designed in the …
+      
     </div>
   </div>
   
