--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -498,6 +498,8 @@
     <h2><a href="/publication/omidvar-2017-dg-2/">DG2: A faster and more accurate differential grouping for large-scale black-box optimization</a></h2>
     <div class="article-style">
       
+      Identification of variable interaction is essential for an efficient implementation of a divide-and-conquer algorithm for large-scale black-box optimization. In this paper, we propose an improved variant of the differential grouping algorithm, which …
+      
     </div>
   </div>
   
