--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
     <ul>
 <li><p><font color="red"><strong>[PhD Vacancy]</strong></font> I am looking for PhD/MSc/Honours/Summer Research students in <strong>Evolutionary Computation and Machine Learning for Scheduling and Combinatorial Optimisation</strong>. If you have similar research interests with me, please do not hesitate to <a href="#contact">contact</a> me.</p></li>
 
-<li><p><font color="red"><strong>[Call for papers]</strong></font> We are organising <a href="http://ssci2019.org/esco.html" target="_blank"><strong>IEEE Symposium on Evolutionary scheduling and combinatorial optimisation (IEEE ESCO)</strong></a>. Submission due date: <strong>July 10, 2019</strong>. Please check the <a href="http://ssci2019.org" target="_blank">IEEE SSCI</a> website for more details.</p></li>
+<li><p><font color="red"><strong>[Call for papers]</strong></font> We are organising <a href="http://ssci2019.org/esco.html" target="_blank"><strong>IEEE Symposium on Evolutionary scheduling and combinatorial optimisation (IEEE ESCO)</strong></a>. Submission due date: <strong>July 10, 2019</strong>.</p></li>
 
 <li><p><strong>2018-12</strong>, our <a href="https://meiyi1986.github.io/publication/zhang-2018-genetic/" target="_blank">paper</a> won the Australasian Joint Conference on Artificial Intelligence <strong>Best Paper Runner-Up Award</strong>!</p></li>
 
