--- a/index.html
+++ b/index.html
@@ -780,8 +780,11 @@ $80,000 NZD. (Co-PI)</li>
 
 <ul>
 <li><strong>2018</strong>, Victoria University of Wellington Early Research Excellence Award</li>
-<li><strong>2017</strong>, IEEE Transactions on Evolutionary Computation (top journal in EC, IF = 10.629) Outstanding
-Paper Award</li>
+<li><strong>2018</strong>, Australasian Joint Conference on Artificial Intelligence <strong>Best Paper Runner-Up Award</strong> (<a href="https://meiyi1986.github.io/publication/zhang-2018-genetic/">paper</a>)</li>
+<li><strong>2018</strong>, International Conference on Web Services (<strong>ARC/CORE Rank A</strong>) <strong>Best Paper Runner-Up</strong> (<a href="https://meiyi1986.github.io/publication/da-2018-hybrid/">paper</a>)</li>
+<li><strong>2017</strong>, IEEE Transactions on Evolutionary Computation (top journal in EC, IF = 10.629) <strong>Outstanding
+Paper Award</strong> (<a href="https://meiyi1986.github.io/publication/omidvar-2014-cooperative/">paper</a>)</li>
+<li><strong>2016</strong>, European Conference on Evolutionary Computation in Combinatorial Optimization <strong>Best Paper Nomination</strong> (<a href="https://meiyi1986.github.io/publication/da-2016-particle/">paper</a>)</li>
 <li><strong>2014</strong>, 2nd Prize, Competition at IEEE World Congress on Computational Intelligence: Optimisation
 of Problems with Multiple Interdependent Components (as sole algorithm designer and programmer)</li>
 <li><strong>2010</strong>, Chinese Academy Of Sciences Dean’s Award (Top 200 postgraduates all over China)</li>
