--- a/publication/index.html
+++ b/publication/index.html
@@ -992,7 +992,7 @@
   </span>
   (2018).
   <a href="/publication/zhang-2018-genetic/" itemprop="name">Genetic programming with multi-tree representation for dynamic flexible job shop scheduling</a>.
-  <em>Australasian Joint Conference on Artificial Intelligence</em> (Best Paper Runner-Up Award).
+  <em>Australasian Joint Conference on Artificial Intelligence</em> (<font color='red'>Best Paper Runner-Up Award</font>).
   
   <p>
 
