--- a/publication/zhang-2018-genetic/index.html
+++ b/publication/zhang-2018-genetic/index.html
@@ -631,7 +631,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>Australasian Joint Conference on Artificial Intelligence</em> (Best Paper Runner-Up Award)</div>
+          <div class="col-12 col-md-9"><em>Australasian Joint Conference on Artificial Intelligence</em> (<font color='red'>Best Paper Runner-Up Award</font>)</div>
         </div>
       </div>
       <div class="col-md-1"></div>
