--- a/index.html
+++ b/index.html
@@ -1459,7 +1459,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   <span class="middot-divider"></span>
   <span class="pub-publication">
     
-      <em>IEEE Transactions on Evolutionary Computation</em>
+      <em>IEEE Transactions on Evolutionary Computation</em> (<font color='red'>Outstanding Paper Award</font>)
     
   </span>
   
