--- a/project/esco/index.html
+++ b/project/esco/index.html
@@ -897,7 +897,7 @@
   </span>
   (2018).
   <a href="/publication/da-2018-hybrid/" itemprop="name">A Hybrid Memetic Approach for Fully Automated Multi-Objective Web Service Composition</a>.
-  <em>Proceedings of the IEEE International Conference on Web Services</em>.
+  <em>Proceedings of the IEEE International Conference on Web Services</em> (<font color='red'>Best Paper Runner-Up</font>).
   
   <p>
 
@@ -1918,7 +1918,7 @@
   </span>
   (2016).
   <a href="/publication/da-2016-particle/" itemprop="name">Particle swarm optimisation with sequence-like indirect representation for web service composition</a>.
-  <em>Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimization</em>.
+  <em>Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimization</em> (<font color='red'>Best Paper Nomination</font>).
   
   <p>
 
