--- a/project/lsgo/index.html
+++ b/project/lsgo/index.html
@@ -1115,7 +1115,7 @@
   </span>
   (2014).
   <a href="/publication/omidvar-2014-cooperative/" itemprop="name">Cooperative co-evolution with differential grouping for large scale optimization</a>.
-  <em>IEEE Transactions on Evolutionary Computation</em>.
+  <em>IEEE Transactions on Evolutionary Computation</em> (<font color='red'>Outstanding Paper Award</font>).
   
   <p>
 
