--- a/publication/da-2016-particle/index.html
+++ b/publication/da-2016-particle/index.html
@@ -638,7 +638,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimization</em></div>
+          <div class="col-12 col-md-9"><em>Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimization</em> (<font color='red'>Best Paper Nomination</font>)</div>
         </div>
       </div>
       <div class="col-md-1"></div>
