--- a/publication/da-2018-hybrid/index.html
+++ b/publication/da-2018-hybrid/index.html
@@ -638,7 +638,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>Proceedings of the IEEE International Conference on Web Services</em></div>
+          <div class="col-12 col-md-9"><em>Proceedings of the IEEE International Conference on Web Services</em> (<font color='red'>Best Paper Runner-Up</font>)</div>
         </div>
       </div>
       <div class="col-md-1"></div>
