--- a/publication/index.html
+++ b/publication/index.html
@@ -2497,7 +2497,7 @@
   </span>
   (2018).
   <a href="/publication/da-2018-hybrid/" itemprop="name">A Hybrid Memetic Approach for Fully Automated Multi-Objective Web Service Composition</a>.
-  <em>Proceedings of the IEEE International Conference on Web Services</em>.
+  <em>Proceedings of the IEEE International Conference on Web Services</em> (<font color='red'>Best Paper Runner-Up</font>).
   
   <p>
 
@@ -6712,7 +6712,7 @@
   </span>
   (2016).
   <a href="/publication/da-2016-particle/" itemprop="name">Particle swarm optimisation with sequence-like indirect representation for web service composition</a>.
-  <em>Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimization</em>.
+  <em>Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimization</em> (<font color='red'>Best Paper Nomination</font>).
   
   <p>
 
@@ -7916,7 +7916,7 @@
   </span>
   (2014).
   <a href="/publication/omidvar-2014-cooperative/" itemprop="name">Cooperative co-evolution with differential grouping for large scale optimization</a>.
-  <em>IEEE Transactions on Evolutionary Computation</em>.
+  <em>IEEE Transactions on Evolutionary Computation</em> (<font color='red'>Outstanding Paper Award</font>).
   
   <p>
 
