--- a/publication/omidvar-2014-cooperative/index.html
+++ b/publication/omidvar-2014-cooperative/index.html
@@ -649,7 +649,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>IEEE Transactions on Evolutionary Computation</em></div>
+          <div class="col-12 col-md-9"><em>IEEE Transactions on Evolutionary Computation</em> (<font color='red'>Outstanding Paper Award</font>)</div>
         </div>
       </div>
       <div class="col-md-1"></div>
