--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2019/03/05, Amirhossein Mostofi, cooperative pharmaceutical supply chain. 2019/02/26, Binzi Xu, evolving dispatching rules with delayed routing for dynamic flexible job shop scheduling. 2019/02/19, Yi Mei, introduction to MOEA/D. 2019/02/12, Whole Group, how to deal with poor experimental results. 2019/01/22, Whole Group, preparing for paper writing. 2019/01/15, Whole Group, how to write paper fast. 2019/01/08, Whole Group, update progress in the new year. 2018/12/04, Jordan MacLaclan, practice on the AI paper presentation.">
+  <meta name="description" content="2019/03/19, Soheila Sadeghiram, 2019/03/12, Boxiong Tan, GPHH for two-level resource allocation in container-based clouds. 2019/03/05, Amirhossein Mostofi, cooperative pharmaceutical supply chain. 2019/02/26, Binzi Xu, evolving dispatching rules with delayed routing for dynamic flexible job shop scheduling. 2019/02/19, Yi Mei, introduction to MOEA/D. 2019/02/12, Whole Group, how to deal with poor experimental results. 2019/01/22, Whole Group, preparing for paper writing. 2019/01/15, Whole Group, how to write paper fast. 2019/01/08, Whole Group, update progress in the new year.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2019/03/05, Amirhossein Mostofi, cooperative pharmaceutical supply chain. 2019/02/26, Binzi Xu, evolving dispatching rules with delayed routing for dynamic flexible job shop scheduling. 2019/02/19, Yi Mei, introduction to MOEA/D. 2019/02/12, Whole Group, how to deal with poor experimental results. 2019/01/22, Whole Group, preparing for paper writing. 2019/01/15, Whole Group, how to write paper fast. 2019/01/08, Whole Group, update progress in the new year. 2018/12/04, Jordan MacLaclan, practice on the AI paper presentation."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2019/03/19, Soheila Sadeghiram, 2019/03/12, Boxiong Tan, GPHH for two-level resource allocation in container-based clouds. 2019/03/05, Amirhossein Mostofi, cooperative pharmaceutical supply chain. 2019/02/26, Binzi Xu, evolving dispatching rules with delayed routing for dynamic flexible job shop scheduling. 2019/02/19, Yi Mei, introduction to MOEA/D. 2019/02/12, Whole Group, how to deal with poor experimental results. 2019/01/22, Whole Group, preparing for paper writing. 2019/01/15, Whole Group, how to write paper fast. 2019/01/08, Whole Group, update progress in the new year."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,6 +503,8 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
+<li>2019/03/19, <strong><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></strong>,</li>
+<li>2019/03/12, <strong><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></strong>, GPHH for two-level resource allocation in container-based clouds.</li>
 <li>2019/03/05, <strong><a href="https://www.victoria.ac.nz/som/research/phd/mgmt/amirhossein-mostofi">Amirhossein Mostofi</a></strong>, cooperative pharmaceutical supply chain.</li>
 <li>2019/02/26, <strong><a href="https://www.researchgate.net/profile/Binzi_Xu">Binzi Xu</a></strong>, evolving dispatching rules with delayed routing for dynamic flexible job shop scheduling.</li>
 <li>2019/02/19, <strong><a href="http://ecs.victoria.ac.nz/Main/YiMei">Yi Mei</a></strong>, introduction to MOEA/D.</li>
