--- a/404.html
+++ b/404.html
@@ -394,6 +394,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/zhang-2019-new/">A New Representation in Genetic Programming for Evolving Dispatching Rules for Dynamic Flexible Job Shop Scheduling</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/tan-2018-genetic/">A Genetic Programming Hyper-heuristic Approach for Online Resource Allocation in Container-Based Clouds</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/park-2018-evolutionary/">Evolutionary Multitask Optimisation for Dynamic Job Shop Scheduling Using Niched Genetic Programming</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/zhang-2018-genetic/">Genetic programming with multi-tree representation for dynamic flexible job shop scheduling</a></li>
   </ul>
   
   
