--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2019/03/26, Whole Group, discussions about niching methods. 2019/03/19, Soheila Sadeghiram, memetic algorithm for data-intensive web service composition. 2019/03/12, Boxiong Tan, GPHH for two-level resource allocation in container-based clouds. 2019/03/05, Amirhossein Mostofi, cooperative pharmaceutical supply chain. 2019/02/26, Binzi Xu, evolving dispatching rules with delayed routing for dynamic flexible job shop scheduling. 2019/02/19, Yi Mei, introduction to MOEA/D. 2019/02/12, Whole Group, how to deal with poor experimental results. 2019/01/22, Whole Group, preparing for paper writing.">
+  <meta name="description" content="2019/04/16, Chen Wang, solving scheduling problems with reinforcement learning. 2019/04/09, Victoria Huang, reinforcement learning for network scheduling policy optimisation. 2019/04/02, Shaolin Wang, ensemble learning with genetic programming for UCARP. 2019/03/26, Whole Group, discussions about niching methods. 2019/03/19, Soheila Sadeghiram, memetic algorithm for data-intensive web service composition. 2019/03/12, Boxiong Tan, GPHH for two-level resource allocation in container-based clouds. 2019/03/05, Amirhossein Mostofi, cooperative pharmaceutical supply chain. 2019/02/26, Binzi Xu, evolving dispatching rules with delayed routing for dynamic flexible job shop scheduling.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2019/03/26, Whole Group, discussions about niching methods. 2019/03/19, Soheila Sadeghiram, memetic algorithm for data-intensive web service composition. 2019/03/12, Boxiong Tan, GPHH for two-level resource allocation in container-based clouds. 2019/03/05, Amirhossein Mostofi, cooperative pharmaceutical supply chain. 2019/02/26, Binzi Xu, evolving dispatching rules with delayed routing for dynamic flexible job shop scheduling. 2019/02/19, Yi Mei, introduction to MOEA/D. 2019/02/12, Whole Group, how to deal with poor experimental results. 2019/01/22, Whole Group, preparing for paper writing."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2019/04/16, Chen Wang, solving scheduling problems with reinforcement learning. 2019/04/09, Victoria Huang, reinforcement learning for network scheduling policy optimisation. 2019/04/02, Shaolin Wang, ensemble learning with genetic programming for UCARP. 2019/03/26, Whole Group, discussions about niching methods. 2019/03/19, Soheila Sadeghiram, memetic algorithm for data-intensive web service composition. 2019/03/12, Boxiong Tan, GPHH for two-level resource allocation in container-based clouds. 2019/03/05, Amirhossein Mostofi, cooperative pharmaceutical supply chain. 2019/02/26, Binzi Xu, evolving dispatching rules with delayed routing for dynamic flexible job shop scheduling."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,6 +503,9 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
+<li>2019/04/16, <strong><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></strong>, solving scheduling problems with reinforcement learning.</li>
+<li>2019/04/09, <strong><a href="https://ecs.victoria.ac.nz/Main/GradGuiyingHuang">Victoria Huang</a></strong>, reinforcement learning for network scheduling policy optimisation.</li>
+<li>2019/04/02, Shaolin Wang, ensemble learning with genetic programming for UCARP.</li>
 <li>2019/03/26, <strong>Whole Group</strong>, discussions about niching methods.</li>
 <li>2019/03/19, <strong><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></strong>, memetic algorithm for data-intensive web service composition.</li>
 <li>2019/03/12, <strong><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></strong>, GPHH for two-level resource allocation in container-based clouds.</li>
