--- a/ecco/index.html
+++ b/ecco/index.html
@@ -536,7 +536,6 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="https://ecs.victoria.ac.nz/Main/GradAtiyaMasood">Atiya Masood</a></li>
 <li><a href="https://www.victoria.ac.nz/som/research/phd/mgmt/amirhossein-mostofi">Amirhossein Mostofi</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradJohnPark">John Park</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradYimingPeng">Yiming Peng</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></li>
@@ -548,8 +547,9 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <h4 id="alumni">Alumni</h4>
 
 <ul>
-<li><a href="https://ecs.victoria.ac.nz/Main/AlexandreSawczukdaSilva">Alexandre Sawczuk da Silva (Graduated in 2018)</a></li>
-<li><a href="https://scholar.google.co.nz/citations?user=YctRNIMAAAAJ&hl=en">Yuxin Liu (Visiting student from Southwest University, 2017-2018, graduated in 2018)</a></li></li>
+<li><a href="https://ecs.victoria.ac.nz/Main/GradYimingPeng">Yiming Peng (Graduated in 2019, working in KPMG)</a></li>
+<li><a href="https://ecs.victoria.ac.nz/Main/AlexandreSawczukdaSilva">Alexandre Sawczuk da Silva (Graduated in 2018, Teaching Fellow in VUW)</a></li>
+<li><a href="https://scholar.google.co.nz/citations?user=YctRNIMAAAAJ&hl=en">Yuxin Liu (Visiting student from Southwest University, 2017-2018, graduated in 2018, Lecturer in Shanghai Maritime University)</a></li></li>
 <li><a href="http://sms.victoria.ac.nz/Main/GradRachelHunt">Rachel Hunt (Graduated in 2016)</a></li></li>
 </ul>
 
