--- a/404.html
+++ b/404.html
@@ -398,19 +398,19 @@
   </ul>
   
   <ul>
+    <li><a href="/publication/al-2019-survey/">A Survey on Evolutionary Machine Learning</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/liu-2019-predictive/">A Predictive-Reactive Approach with Genetic Programming and Cooperative Co-evolution for Uncertain Capacitated Arc Routing Problem</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/tan-2018-genetic/">A Genetic Programming Hyper-heuristic Approach for Online Resource Allocation in Container-Based Clouds</a></li>
   </ul>
   
   <ul>
     <li><a href="/publication/masood-2018-adaptive/">Adaptive Reference Point Generation for Many-Objective Optimization Using NSGA-III</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/maclachlan-2018-improved/">An Improved Genetic Programming Hyper-Heuristic for the Uncertain Capacitated Arc Routing Problem</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/park-2018-evolutionary/">Evolutionary Multitask Optimisation for Dynamic Job Shop Scheduling Using Niched Genetic Programming</a></li>
   </ul>
   
   
