--- a/publication/al-2019-survey/index.html
+++ b/publication/al-2019-survey/index.html
@@ -575,6 +575,8 @@
 
 
 
+  
+
 
 
 
@@ -594,6 +596,10 @@
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/al-2019-survey/al-2019-survey.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
