--- a/publication/index.html
+++ b/publication/index.html
@@ -846,6 +846,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/al-2019-survey/al-2019-survey.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -1038,6 +1042,10 @@
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/liu-2019-predictive/liu-2019-predictive.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
