--- a/publication/liu-2019-predictive/index.html
+++ b/publication/liu-2019-predictive/index.html
@@ -540,6 +540,8 @@
 
 
 
+  
+
 
 
 
@@ -559,6 +561,10 @@
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/liu-2019-predictive/liu-2019-predictive.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
