--- a/index.html
+++ b/index.html
@@ -2372,6 +2372,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/al-2019-survey/al-2019-survey.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -2494,6 +2498,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/liu-2019-predictive/liu-2019-predictive.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
