--- a/404.html
+++ b/404.html
@@ -406,11 +406,11 @@
   </ul>
   
   <ul>
-    <li><a href="/publication/tan-2018-genetic/">A Genetic Programming Hyper-heuristic Approach for Online Resource Allocation in Container-Based Clouds</a></li>
+    <li><a href="/publication/yska-2018-feature/">Feature Construction in Genetic Programming Hyper-Heuristic for Dynamic Flexible Job Shop Scheduling</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/masood-2018-adaptive/">Adaptive Reference Point Generation for Many-Objective Optimization Using NSGA-III</a></li>
+    <li><a href="/publication/mei-2018-genetic-1/">Genetic Programming Hyper-Heuristic for Multi-Vehicle Uncertain Capacitated Arc Routing Problem</a></li>
   </ul>
   
   
