--- a/supervision/index.html
+++ b/supervision/index.html
@@ -534,6 +534,7 @@
 <h3 id="honours-students">Honours Students</h3>
 
 <ul>
+<li>Rhaz Solomon (Victoria University of Wellington, 2019): &ldquo;Bloat Control in Genetic Programming&rdquo;</li>
 <li>Samuel Meredith (Victoria University of Wellington, 2018): &ldquo;Genetic Programming for Dynamic Orienteering Problem&rdquo;</li>
 <li>Michael Sirvid (Victoria University of Wellington, 2018): &ldquo;Genetic Programming for Online Bin Packing&rdquo;</li>
 <li>Valerie Chan (Victoria University of Wellington, 2017): &ldquo;Evolutionary Computation for Dynamic Orienteering Problem&rdquo;</li>
