--- a/supervision/index.html
+++ b/supervision/index.html
@@ -544,6 +544,7 @@
 <h3 id="summer-research-students">Summer Research Students</h3>
 
 <ul>
+<li>Shaolin Wang (Victoria University of Wellington, 2018): &ldquo;Evolutionary Computation for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</li>
 <li>Jordan MacLachlan (Victoria University of Wellington, 2017): &ldquo;Evolutionary Computation for Dynamic Arc Routing&rdquo;</li>
 <li>Daniel Yska (Victoria University of Wellington, 2017): &ldquo;Genetic Programming Hyper-heuristics for Flexible Job Shop Scheduling&rdquo; (with Prof Mengjie Zhang)</li>
 <li>Josiah Jacobsen-Grocott (Victoria University of Wellington, 2016): &ldquo;Evolutionary Computation for Dynamic Vehicle Routing&rdquo;</li>
