--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2019/05/14, Su Nguyen 2019/05/07, Mazhar Anzari Ardeh, discussion on PhD proposal objectives. 2019/04/30, Tao Shi, discussion on PhD proposal objectives. 2019/04/16, Chen Wang, solving scheduling problems with reinforcement learning. 2019/04/09, Victoria Huang, reinforcement learning for network scheduling policy optimisation. 2019/04/02, Shaolin Wang, ensemble learning with genetic programming for UCARP. 2019/03/26, Whole Group, discussions about niching methods. 2019/03/19, Soheila Sadeghiram, memetic algorithm for data-intensive web service composition. 2019/03/12, Boxiong Tan, GPHH for two-level resource allocation in container-based clouds.">
+  <meta name="description" content="2019/05/22, Tao Shi, practice on PhD proposal seminar. 2019/05/14, Su Nguyen, human centric heuristic evolution for dynamic scheduling. 2019/05/07, Mazhar Anzari Ardeh, discussion on PhD proposal objectives. 2019/04/30, Tao Shi, discussion on PhD proposal objectives. 2019/04/16, Chen Wang, solving scheduling problems with reinforcement learning. 2019/04/09, Victoria Huang, reinforcement learning for network scheduling policy optimisation. 2019/04/02, Shaolin Wang, ensemble learning with genetic programming for UCARP. 2019/03/26, Whole Group, discussions about niching methods.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2019/05/14, Su Nguyen 2019/05/07, Mazhar Anzari Ardeh, discussion on PhD proposal objectives. 2019/04/30, Tao Shi, discussion on PhD proposal objectives. 2019/04/16, Chen Wang, solving scheduling problems with reinforcement learning. 2019/04/09, Victoria Huang, reinforcement learning for network scheduling policy optimisation. 2019/04/02, Shaolin Wang, ensemble learning with genetic programming for UCARP. 2019/03/26, Whole Group, discussions about niching methods. 2019/03/19, Soheila Sadeghiram, memetic algorithm for data-intensive web service composition. 2019/03/12, Boxiong Tan, GPHH for two-level resource allocation in container-based clouds."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2019/05/22, Tao Shi, practice on PhD proposal seminar. 2019/05/14, Su Nguyen, human centric heuristic evolution for dynamic scheduling. 2019/05/07, Mazhar Anzari Ardeh, discussion on PhD proposal objectives. 2019/04/30, Tao Shi, discussion on PhD proposal objectives. 2019/04/16, Chen Wang, solving scheduling problems with reinforcement learning. 2019/04/09, Victoria Huang, reinforcement learning for network scheduling policy optimisation. 2019/04/02, Shaolin Wang, ensemble learning with genetic programming for UCARP. 2019/03/26, Whole Group, discussions about niching methods."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,7 +503,8 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
-<li>2019/05/14, <strong><a href="https://scholar.google.co.nz/citations?user=PQYVtl4AAAAJ&hl=en">Su Nguyen</a></strong></li>
+<li>2019/05/22, <strong><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></strong>, practice on PhD proposal seminar.</li>
+<li>2019/05/14, <strong><a href="https://scholar.google.co.nz/citations?user=PQYVtl4AAAAJ&hl=en">Su Nguyen</a>, human centric heuristic evolution for dynamic scheduling.</strong></li>
 <li>2019/05/07, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, discussion on PhD proposal objectives.</li>
 <li>2019/04/30, <strong><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></strong>, discussion on PhD proposal objectives.</li>
 <li>2019/04/16, <strong><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></strong>, solving scheduling problems with reinforcement learning.</li>
