--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -504,7 +504,7 @@
     <div class="article-style" itemprop="articleBody">
       <ul>
 <li>2019/05/22, <strong><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></strong>, practice on PhD proposal seminar.</li>
-<li>2019/05/14, <strong><a href="https://scholar.google.co.nz/citations?user=PQYVtl4AAAAJ&hl=en">Su Nguyen</a>, human centric heuristic evolution for dynamic scheduling.</strong></li>
+<li>2019/05/14, <strong><a href="https://scholar.google.co.nz/citations?user=PQYVtl4AAAAJ&hl=en">Su Nguyen</a></strong>, human centric heuristic evolution for dynamic scheduling.</strong></li>
 <li>2019/05/07, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, discussion on PhD proposal objectives.</li>
 <li>2019/04/30, <strong><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></strong>, discussion on PhD proposal objectives.</li>
 <li>2019/04/16, <strong><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></strong>, solving scheduling problems with reinforcement learning.</li>
