--- a/ecco/index.html
+++ b/ecco/index.html
@@ -529,9 +529,9 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <ul>
 <li><a href="http://ecs.victoria.ac.nz/Main/GradMahdiAbdollahi">Mahdi Abdollahi</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></li>
+<li><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></li>
 <li><a href="https://www.victoria.ac.nz/architecture/research/current-phd-research/harry-yi-he">Harry He</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradGuiyingHuang">Victoria Huang</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradDeepakKarunakaran">Deepak Karunakaran</a></li>
 <li>Jordan MacLaclan</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradAtiyaMasood">Atiya Masood</a></li>
 <li><a href="https://www.victoria.ac.nz/som/research/phd/mgmt/amirhossein-mostofi">Amirhossein Mostofi</a></li>
@@ -540,6 +540,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></li>
+<li>Shaolin Wang</li>
 <li><a href="https://www.researchgate.net/profile/Binzi_Xu">Binzi Xu</a> (Visiting student from Jiangnan University, 2018-2019)</li>
 <li><a href="http://ecs.victoria.ac.nz/Main/GradFangfangZhang">Fangfang Zhang</a></li>
 </ul>
@@ -547,6 +548,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <h4 id="alumni">Alumni</h4>
 
 <ul>
+<li><a href="https://ecs.victoria.ac.nz/Main/GradDeepakKarunakaran">Deepak Karunakaran (Graduated in 2019)</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradYimingPeng">Yiming Peng (Graduated in 2019, working in KPMG)</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/AlexandreSawczukdaSilva">Alexandre Sawczuk da Silva (Graduated in 2018, Teaching Fellow in VUW)</a></li>
 <li><a href="https://scholar.google.co.nz/citations?user=YctRNIMAAAAJ&hl=en">Yuxin Liu (Visiting student from Southwest University, 2017-2018, graduated in 2018, Lecturer in Shanghai Maritime University)</a></li></li>
