--- a/supervision/index.html
+++ b/supervision/index.html
@@ -516,10 +516,11 @@
 <li>Atiya Masood (Victoria University of Wellington, 2015): &ldquo;Many-Objective Job Shop Scheduling&rdquo; (with Dr Aaron Chen, and Prof Mengjie Zhang)</li>
 <li><em>John Park (Victoria University of Wellington, graduated in 2019): &ldquo;Genetic Programming Hyper-heuristics for Dynamic Job Shop&rdquo; (with Dr Aaron Chen, Dr Su Nguyen, and Prof Mengjie Zhang)</em></li>
 <li><em>Deepak Karunakaran (Victoria University of Wellington, graduated in 2019): &ldquo;Genetic Programming Hyper-heuristics for Dynamic Job Shop Scheduling&rdquo; (with Dr Aaron Chen, and Prof Mengjie Zhang)</em></li>
-<li><em>Alexandre Sawczuk Da Silva (Victoria University of Wellington, graduated in 2019): &ldquo;Evolutionary Computation for Multifaceted Web Service Composition&rdquo; <a href="http://researcharchive.vuw.ac.nz/handle/10063/8014"><strong>[PhD thesis]</strong></a> (with Dr Hui Ma, and Prof Mengjie Zhang)</em></li>
-<li><em>Md. Jakirul Islam (RMIT University, Australia, graduated in 2018): &ldquo;Structural Optimization Using Evolutionary Multimodal and Bilevel Optimization Techniques&rdquo; <a href="http://researchbank.rmit.edu.au/eserv/rmit:162527/Islam.pdf"><strong>[PhD thesis]</strong></a>  (with Prof Xiaodong Li)</em></li>
+<li><em>Alexandre Sawczuk Da Silva (Victoria University of Wellington, graduated in 2019): &ldquo;Evolutionary Computation for Multifaceted Web Service Composition&rdquo; <a href="http://researcharchive.vuw.ac.nz/handle/10063/8014">[PhD thesis]</a> (with Dr Hui Ma, and Prof Mengjie Zhang)</em></li>
+<li><em>Md. Jakirul Islam (RMIT University, Australia, graduated in 2018): &ldquo;Structural Optimization Using Evolutionary Multimodal and Bilevel Optimization Techniques&rdquo; <a href="http://researchbank.rmit.edu.au/eserv/rmit:162527/Islam.pdf">[PhD thesis]</a> (with Prof Xiaodong Li)</em></li>
 <li><em>Yuxin Liu (Southwestern University, China, graduated in 2018): &ldquo;Hyper-heuristics for Arc Routing&rdquo; (with Prof Mengjie Zhang, and Prof Zili Zhang)</em></li>
-<li><em>Jing Xie (RMIT University, Australia, graduated in 2017): &ldquo;Genetic Programming for Warehouse Layout Optimization&rdquo; (with Dr Andy Song, and Prof Xiaodong Li)</em></li>
+<li><em>Jing Xie (RMIT University, Australia, graduated in 2017): &ldquo;On the Investigation of the Large-Scale
+Grouping Constrained Storage Location Assignment Problem&rdquo; <a href="https://researchbank.rmit.edu.au/eserv/rmit:162142/Xie.pdf">[PhD thesis]</a> (with Dr Andy Song, Prof Andreas Ernst, and Prof Xiaodong Li)</em></li>
 </ol>
 
 <h3 id="masters">Masters</h3>
