--- a/404.html
+++ b/404.html
@@ -394,23 +394,23 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="/publication/zhang-2019-new/">A New Representation in Genetic Programming for Evolving Dispatching Rules for Dynamic Flexible Job Shop Scheduling</a></li>
+    <li><a href="/publication/tan-2019-hybrid/">A Hybrid Genetic Programming Hyper-Heuristic Approach for Online Two-level Resource Allocation in Container-based Clouds</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/liu-2019-predictive/">A Predictive-Reactive Approach with Genetic Programming and Cooperative Co-evolution for Uncertain Capacitated Arc Routing Problem</a></li>
+    <li><a href="/publication/karunakaran-2019-active/">Active Sampling for Dynamic Job Shop Scheduling using Genetic Programming</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/al-2019-survey/">A Survey on Evolutionary Machine Learning</a></li>
+    <li><a href="/publication/abdollahi-2019-active/">An Ontology-based Two-Stage Approach to Medical Text Classification with Feature Selection by Particle Swarm Optimisation</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/tan-2018-genetic/">A Genetic Programming Hyper-heuristic Approach for Online Resource Allocation in Container-Based Clouds</a></li>
+    <li><a href="/publication/zhang-2019-can/">Can Stochastic Dispatching Rules Evolved by Genetic Programming Hyper-heuristics Help in Dynamic Flexible Job Shop Scheduling?</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/masood-2018-adaptive/">Adaptive Reference Point Generation for Many-Objective Optimization Using NSGA-III</a></li>
+    <li><a href="/publication/zhang-2019-evolving/">Evolving Dispatching Rules for Multi-objective Dynamic Flexible Job Shop Scheduling via Genetic Programming Hyper-heuristics</a></li>
   </ul>
   
   
