--- a/reviewers/index.html
+++ b/reviewers/index.html
@@ -28,8 +28,7 @@
   
     
   
-  <meta name="description" content="IEEE Transactions on Evolutionary Computation (ARC/CORE Tier A*) Evolutionary Computation Journal (ARC/CORE Tier A) IEEE Transactions on Cybernetics (ARC/CORE Tier A) (Outstanding Reviewer 2018) European Journal of Operational Research (ARC/CORE Tier A) Journal of Heuristics (ARC/CORE Tier A) Waste Management Transportation Research Part C (ARC Tier A)
- Transportation Research Part D IEEE Transactions on Services Computing Information Sciences Applied Soft Computing (Outstanding Reviewer 2015, 2017) Robotics and Computer-Integrated Manufacturing Swarm Intelligence Genetic Programming and Evolvable Machines Engineering Applications of Artificial Intelligence Journal of Information Technology &amp; Software Engineering Journal of Scheduling Applied Sciences">
+  <meta name="description" content=" IEEE Transactions on Evolutionary Computation (ARC/CORE Tier A*) Evolutionary Computation Journal (ARC/CORE Tier A) IEEE Transactions on Cybernetics (ARC/CORE Tier A) (Outstanding Reviewer 2018) European Journal of Operational Research (ARC/CORE Tier A) Journal of Heuristics (ARC/CORE Tier A) Waste Management Transportation Research Part C (ARC Tier A) Transportation Research Part D IEEE Transactions on Services Computing Information Sciences Applied Soft Computing (Outstanding Reviewer 2015, 2017) Robotics and Computer-Integrated Manufacturing Swarm Intelligence Genetic Programming and Evolvable Machines Engineering Applications of Artificial Intelligence Journal of Information Technology &amp; Software Engineering Journal of Scheduling Applied Sciences Soft Computing Complex &amp; Intelligent Systems Computational Intelligence and Neuroscience Computational Optimization and Applications NeuroComputing Memetic Computing Journal of Industrial and Production Engineering Journal of Computer Science and Technology Natural Computing EURASIP Journal on Wireless Communications and Networking PLOS ONE Journal Frontiers in Computer Science Frontier of Engineering Management  ">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/reviewers/">
@@ -121,8 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/reviewers/">
   <meta property="og:title" content="Journal Reviewer | Yi Mei @ VUW">
-  <meta property="og:description" content="IEEE Transactions on Evolutionary Computation (ARC/CORE Tier A*) Evolutionary Computation Journal (ARC/CORE Tier A) IEEE Transactions on Cybernetics (ARC/CORE Tier A) (Outstanding Reviewer 2018) European Journal of Operational Research (ARC/CORE Tier A) Journal of Heuristics (ARC/CORE Tier A) Waste Management Transportation Research Part C (ARC Tier A)
- Transportation Research Part D IEEE Transactions on Services Computing Information Sciences Applied Soft Computing (Outstanding Reviewer 2015, 2017) Robotics and Computer-Integrated Manufacturing Swarm Intelligence Genetic Programming and Evolvable Machines Engineering Applications of Artificial Intelligence Journal of Information Technology &amp; Software Engineering Journal of Scheduling Applied Sciences"><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content=" IEEE Transactions on Evolutionary Computation (ARC/CORE Tier A*) Evolutionary Computation Journal (ARC/CORE Tier A) IEEE Transactions on Cybernetics (ARC/CORE Tier A) (Outstanding Reviewer 2018) European Journal of Operational Research (ARC/CORE Tier A) Journal of Heuristics (ARC/CORE Tier A) Waste Management Transportation Research Part C (ARC Tier A) Transportation Research Part D IEEE Transactions on Services Computing Information Sciences Applied Soft Computing (Outstanding Reviewer 2015, 2017) Robotics and Computer-Integrated Manufacturing Swarm Intelligence Genetic Programming and Evolvable Machines Engineering Applications of Artificial Intelligence Journal of Information Technology &amp; Software Engineering Journal of Scheduling Applied Sciences Soft Computing Complex &amp; Intelligent Systems Computational Intelligence and Neuroscience Computational Optimization and Applications NeuroComputing Memetic Computing Journal of Industrial and Production Engineering Journal of Computer Science and Technology Natural Computing EURASIP Journal on Wireless Communications and Networking PLOS ONE Journal Frontiers in Computer Science Frontier of Engineering Management  "><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -511,7 +509,7 @@
 <li><a href="http://www.journals.elsevier.com/european-journal-of-operational-research/">European Journal of Operational Research</a> <strong>(ARC/CORE Tier A)</strong></li>
 <li><a href="http://www.springer.com/mathematics/applications/journal/10732">Journal of Heuristics</a> <strong>(ARC/CORE Tier A)</strong></li>
 <li><a href="https://www.journals.elsevier.com/waste-management">Waste Management</a></li>
-<li><a href="http://www.journals.elsevier.com/transportation-research-part-c-emerging-technologies/">Transportation Research Part C</a> <strong>(ARC Tier A)</strong><br /></li>
+<li><a href="http://www.journals.elsevier.com/transportation-research-part-c-emerging-technologies/">Transportation Research Part C</a> <strong>(ARC Tier A)</strong></li>
 <li><a href="http://www.journals.elsevier.com/transportation-research-part-d-transport-and-environment/">Transportation Research Part D</a></li>
 <li><a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=4629386">IEEE Transactions on Services Computing</a></li>
 <li><a href="http://www.journals.elsevier.com/information-sciences/">Information Sciences</a></li>
@@ -522,9 +520,10 @@
 <li><a href="http://www.journals.elsevier.com/engineering-applications-of-artificial-intelligence/">Engineering Applications of Artificial Intelligence</a></li>
 <li><a href="http://www.omicsgroup.org/journals/information-technology-software-engineering.php">Journal of Information Technology &amp; Software Engineering</a></li>
 <li><a href="http://link.springer.com/journal/10951">Journal of Scheduling</a></li>
-<li><a href="http://www.mdpi.com/journal/applsci">Applied Sciences</a><br /></li>
+<li><a href="http://www.mdpi.com/journal/applsci">Applied Sciences</a></li>
 <li><a href="http://www.springer.com/engineering/computational+intelligence+and+complexity/journal/500">Soft Computing</a></li>
-<li><a href="http://www.springer.com/engineering/computational+intelligence+and+complexity/journal/40747">Complex &amp; Intelligent Systems</a><br /></li>
+<li><a href="http://www.springer.com/engineering/computational+intelligence+and+complexity/journal/40747">Complex &amp; Intelligent Systems</a></li>
+<li><a href="https://www.hindawi.com/journals/cin/">Computational Intelligence and Neuroscience</a></li>
 <li><a href="http://www.springer.com/mathematics/journal/10589">Computational Optimization and Applications</a></li>
 <li><a href="http://www.journals.elsevier.com/neurocomputing/">NeuroComputing</a></li>
 <li><a href="http://link.springer.com/journal/12293">Memetic Computing</a></li>
