--- a/publication/mei-2018-genetic-2/index.html
+++ b/publication/mei-2018-genetic-2/index.html
@@ -560,6 +560,14 @@
 </button>
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/meiyi1986/gporienteering" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
