--- a/publication/mei-2017-efficient/index.html
+++ b/publication/mei-2017-efficient/index.html
@@ -574,6 +574,14 @@
 </button>
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/meiyi1986/GPJSS" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
