--- a/index.html
+++ b/index.html
@@ -2048,6 +2048,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
 
 
 
@@ -2166,6 +2172,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
 
 
 
@@ -2405,6 +2417,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
+
 
 
 
@@ -2516,6 +2534,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
 
 
 
